fix SonarQube alerts: extract constants, nested try-catch, Math.clamp, Thread.sleep